mgr/dashboard: Adds 'tcmu-runner' to the 'user:rbd' backstore descr
Signed-off-by: Ricardo Marques <rimarques@suse.com>
(cherry picked from commit b7870c8051c33e44b2190d295c1957f2a7a17d89)

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/iscsi-target-image-settings-modal/iscsi-target-image-settings-modal.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/iscsi-target-image-settings-modal/iscsi-target-image-settings-modal.component.html
@@ -20,7 +20,7 @@
                   [(ngModel)]="model.backstore"
                   [disabled]="backstores.length == 1">
             <option *ngFor="let bs of backstores"
-                    [value]="bs">{{ bs }}</option>
+                    [value]="bs">{{ bs | iscsiBackstore }}</option>
           </select>
         </div>
       </div>
