mgr/dashboard: Update all npm packages
This includes a major upgrade of angular from v7 to v8.

Using NG_CLI_ANALYTICS to disable angular cli to query about allowing analytics.

Fixes: https://tracker.ceph.com/issues/41059

Signed-off-by: Tiago Melo <tmelo@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-chart/cephfs-chart.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-chart/cephfs-chart.component.html
@@ -1,4 +1,5 @@
-<div class="chart-container">
+<div class="chart-container"
+     *ngIf="chart?.datasets">
   <canvas baseChart
           #chartCanvas
           [datasets]="chart?.datasets"
