mgr/dashboard: Provide user enable/disable capability in the frontend
Fixes: http://tracker.ceph.com/issues/25229

Signed-off-by: Patrick Nawracay <pnawracay@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-form/user-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-form/user-form.component.html
@@ -132,7 +132,26 @@
                                 [messages]="messages"></cd-select-badges>
             </span>
           </div>
+        </div>
 
+        <!-- Enabled -->
+        <div class="form-group row" *ngIf="!isCurrentUser()">
+          <label class="col-sm-3 col-form-label"
+                 i18n>Enabled</label>
+          <div class="col-sm-9">
+            <div class="btn-group"
+                 btnRadioGroup
+                 formControlName="enabled">
+              <label [btnRadio]="true"
+                     class="btn btn-primary"
+                     tabindex="0"
+                     role="button">Enabled</label>
+              <label [btnRadio]="false"
+                     class="btn btn-primary"
+                     tabindex="0"
+                     role="button">Disabled</label>
+            </div>
+          </div>
         </div>
 
       </div>
