mgr/dashboard: orchestrator integration initial works
- Display hosts, inventory, and services from orchestrator
- Allow adding/removing hosts

Fixes: https://tracker.ceph.com/issues/40337
Fixes: https://tracker.ceph.com/issues/40336
Fixes: https://tracker.ceph.com/issues/38233

Signed-off-by: Kiefer Chang <kiefer.chang@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/host-details/host-details.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/host-details/host-details.component.html
@@ -1,6 +1,21 @@
-<tabset *ngIf="selection.hasSingleSelection && grafanaPermission.read">
+<tabset *ngIf="selection.hasSingleSelection">
   <tab i18n-heading
-       heading="Performance Details">
+       heading="Inventory"
+       *ngIf="hostsPermission.read">
+    <cd-inventory
+      [hostname]="host['hostname']">
+    </cd-inventory>
+  </tab>
+  <tab i18n-heading
+       heading="Services"
+       *ngIf="hostsPermission.read">
+    <cd-services
+      [hostname]="host['hostname']">
+    </cd-services>
+  </tab>
+  <tab i18n-heading
+       heading="Performance Details"
+       *ngIf="grafanaPermission.read">
     <cd-grafana [grafanaPath]="'host-details?var-ceph_hosts=' + host['hostname']"
                 uid="rtOg0AiWz"
                 grafanaStyle="three">
