--- a/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-password-form/user-password-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-password-form/user-password-form.component.html
@@ -40,6 +40,10 @@
           <label class="col-form-label col-sm-3"
                  for="newpassword">
             <ng-container i18n>New password</ng-container>
+            <span>
+              <i class="fa fa-fw fa-question-circle-o" i18n-title
+                 title="{{ requiredPasswordRulesMessage }}"></i>
+            </span>
             <span class="required"></span>
           </label>
           <div class="col-sm-9">
@@ -49,13 +53,16 @@
                      placeholder="Password..."
                      id="newpassword"
                      autocomplete="new-password"
-                     formControlName="newpassword">
+                     formControlName="newpassword"
+                     (keyup)="checkPassword()">       
               <span class="input-group-append">
                 <button class="btn btn-light"
                         cdPasswordButton="newpassword">
                 </button>
               </span>
             </div>
+            <div id="passwordStrengthLevel" class="{{ passwordStrengthLevel }}"></div>
+            {{ passwordStrengthDescription }}
             <span class="invalid-feedback"
                   *ngIf="userForm.showError('newpassword', frm, 'required')"
                   i18n>This field is required.</span>
