mgr/dashboard: add ToastComponent
Add a ToastComponent in order to encapsulate all Toast
related settings. This provides three advantages:
* We can define our own Toast template
* We need only one config class (CdNotificationConfig)
* We need to deal with less HTML related strings in the
  *.ts files

Signed-off-by: Tatjana Dehler <tdehler@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/notifications/notifications.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/notifications/notifications.component.html
@@ -24,7 +24,9 @@
           </td>
         </tr>
         <tr>
-          <td [innerHtml]="notificationService.renderTimeAndApplicationHtml(notification)"></td>
+          <td>
+            <cd-toast-footer [config]="notification.options"></cd-toast-footer>
+          </td>
         </tr>
       </table>
       <hr>
