mgr/dashboard: Enforce change password
Fixes: https://tracker.ceph.com/issues/24655

Signed-off-by: Dziomdziora, Elżbieta <elzbieta.dziomdziora@ts.fujitsu.coom>

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-form/user-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-form/user-form.component.html
@@ -150,6 +150,15 @@
           </div>
         </div>
 
+        <!-- Change Password -->
+        <div class="form-group row">
+          <label class="col-sm-3 col-form-label"
+                i18n>Force Change Password</label>
+            <div class="col-sm-9">
+              <input type="checkbox" formControlName="forceChangePwd" value="forceChangePwd">
+            </div> 
+        </div>
+    
       </div>
       <div class="card-footer">
         <div class="button-group text-right">
