mgr/dashboard: Enforce change password
Fixes: https://tracker.ceph.com/issues/24655

Signed-off-by: Dziomdziora, Elżbieta <elzbieta.dziomdziora@ts.fujitsu.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-form/user-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-form/user-form.component.html
@@ -164,6 +164,22 @@
           </div>
         </div>
 
+        <!-- Change Password -->
+        <div class="form-group row">
+          <div class="offset-sm-3 col-sm-9">
+            <div class="custom-control custom-checkbox">
+              <input type="checkbox"
+                     class="custom-control-input"
+                     id="force_change_pwd"
+                     name="force_change_pwd"
+                     formControlName="force_change_pwd">
+              <label class="custom-control-label"
+                     for="force_change_pwd"
+                     i18n>Force Change Password</label>
+            </div>
+          </div>
+        </div>
+
       </div>
       <div class="card-footer">
         <div class="button-group text-right">
