mgr/dashboard: Unify Tasks and Notifications into a sidebar
Fixes: https://tracker.ceph.com/issues/37402

Signed-off-by: Tiago Melo <tmelo@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/app.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/app.component.html
@@ -1,8 +1,26 @@
-<block-ui>
-  <cd-navigation *ngIf="!isLoginActive()"></cd-navigation>
-  <div class="container-fluid"
-       [ngClass]="{'full-height':isLoginActive(), 'dashboard':isDashboardPage()} ">
-    <cd-breadcrumbs></cd-breadcrumbs>
-    <router-outlet></router-outlet>
+<!-- Container for sidebar(s) + page content -->
+<ng-sidebar-container>
+
+  <!-- A sidebar -->
+  <ng-sidebar #sidebar
+              [(opened)]="sidebarOpened"
+              [animate]="sidebarAnimate"
+              position="end"
+              mode="over"
+              autoFocus="false"
+              closeOnClickOutside="true">
+    <cd-notifications-sidebar *ngIf="!isLoginActive()"></cd-notifications-sidebar>
+  </ng-sidebar>
+
+  <!-- Page content -->
+  <div ng-sidebar-content>
+    <block-ui>
+      <cd-navigation *ngIf="!isLoginActive()"></cd-navigation>
+      <div class="container-fluid"
+           [ngClass]="{'full-height':isLoginActive(), 'dashboard':isDashboardPage()} ">
+        <cd-breadcrumbs></cd-breadcrumbs>
+        <router-outlet></router-outlet>
+      </div>
+    </block-ui>
   </div>
-</block-ui>
+</ng-sidebar-container>
