mgr/dashboard: Add frontend unit tests for orchestrator components
- Add unit tests for hosts, inventory, and services
- Refine permission of host-details component

Signed-off-by: Kiefer Chang <kiefer.chang@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/host-details/host-details.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/host-details/host-details.component.html
@@ -1,22 +1,22 @@
 <tabset *ngIf="selection.hasSingleSelection">
   <tab i18n-heading
        heading="Inventory"
-       *ngIf="hostsPermission.read">
+       *ngIf="permissions.hosts.read">
     <cd-inventory
-      [hostname]="host['hostname']">
+      [hostname]="selection.first()['hostname']">
     </cd-inventory>
   </tab>
   <tab i18n-heading
        heading="Services"
-       *ngIf="hostsPermission.read">
+       *ngIf="permissions.hosts.read">
     <cd-services
-      [hostname]="host['hostname']">
+      [hostname]="selection.first()['hostname']">
     </cd-services>
   </tab>
   <tab i18n-heading
        heading="Performance Details"
-       *ngIf="grafanaPermission.read">
-    <cd-grafana [grafanaPath]="'host-details?var-ceph_hosts=' + host['hostname']"
+       *ngIf="permissions.grafana.read">
+    <cd-grafana [grafanaPath]="'host-details?var-ceph_hosts=' + selection.first()['hostname']"
                 uid="rtOg0AiWz"
                 grafanaStyle="three">
     </cd-grafana>
