--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/hosts.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/hosts.component.html
@@ -29,6 +29,7 @@
         </span>
       </ng-template>
       <cd-host-details cdTableDetail
+                       [permissions]="permissions"
                        [selection]="selection">
       </cd-host-details>
     </cd-table>
