--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/hosts.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/hosts.component.html
@@ -9,7 +9,8 @@
               (updateSelection)="updateSelection($event)">
       <ng-template #servicesTpl let-value="value">
         <span *ngFor="let service of value; last as isLast">
-          <a [routerLink]="[service.cdLink]"
+          <a class="service-link"
+             [routerLink]="[service.cdLink]"
              [queryParams]="cdParams"
              *ngIf="service.canRead">{{ service.type }}.{{ service.id }}
           </a>
