mgr/dashboard: Missing service metadata is not handled correctly
The Dashboard REST API throws a Python error when fetching metadata for service mds.X fails. Instead of a Python error an exception should be thrown.

Fixes: https://tracker.ceph.com/issues/41525

Signed-off-by: Volker Theile <vtheile@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-detail/cephfs-detail.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-detail/cephfs-detail.component.html
@@ -7,7 +7,7 @@
 
         <cd-table [data]="ranks.data"
                   [columns]="ranks.columns"
-                  (fetchData)="refresh()"
+                  (fetchData)="refresh($event)"
                   [toolHeader]="false">
         </cd-table>
 
