--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-detail/cephfs-detail.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-detail/cephfs-detail.component.html
@@ -4,20 +4,19 @@
     <div class="row">
       <div class="col-sm-6">
         <legend i18n>Ranks</legend>
-
         <cd-table [data]="ranks.data"
                   [columns]="ranks.columns"
                   (fetchData)="refresh()"
                   [toolHeader]="false">
         </cd-table>
 
+        <legend i18n>Standbys</legend>
         <cd-table-key-value [data]="standbys">
         </cd-table-key-value>
       </div>
 
       <div class="col-sm-6">
         <legend i18n>Pools</legend>
-
         <cd-table [data]="pools.data"
                   [columns]="pools.columns"
                   [toolHeader]="false">
