--- a/src/pybind/mgr/dashboard/frontend/src/app/shared/components/alert-panel/alert-panel.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/shared/components/alert-panel/alert-panel.component.scss
@@ -1,7 +1,8 @@
-.info-panel-alert-icon {
+.alert-panel-icon {
   vertical-align: top;
   padding-right: 15px; // See @alert-padding in bootstrap/less/variables.less
 }
-.info-panel-alert-title {
+
+.alert-panel-title {
   font-weight: bold;
 }
