--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-list/osd-list.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-list/osd-list.component.html
@@ -66,7 +66,7 @@
              let-actionDescription="actionDescription">
   <div *ngIf="!safeToDestroyResult['is_safe_to_destroy']"
        class="danger">
-    <cd-warning-panel i18n>The OSD is not safe to destroy!</cd-warning-panel>
+    <cd-alert-panel type="warning" i18n>The OSD is not safe to destroy!</cd-alert-panel>
   </div>
   <ng-container i18n><strong>OSD {{ selection.first().id }}</strong> will be
 <strong>{{ actionDescription }}</strong> if you proceed.</ng-container>
