--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/nfs/nfs-501/nfs-501.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/nfs/nfs-501/nfs-501.component.html
@@ -1,5 +1,5 @@
-<cd-info-panel>
+<cd-alert-panel type="info">
   {{ message }}<br>
   <ng-container i18n>Please consult the <a href="{{docsUrl}}" target="_blank">documentation</a>
   on how to configure and enable the NFS Ganesha management functionality.</ng-container>
-</cd-info-panel>
+</cd-alert-panel>
