--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/performance-counter/table-performance-counter/table-performance-counter.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/performance-counter/table-performance-counter/table-performance-counter.component.html
@@ -9,5 +9,5 @@
   </ng-template>
 </cd-table>
 <ng-template #warning>
-  <cd-warning-panel i18n>Performance counters not available</cd-warning-panel>
+  <cd-alert-panel type="warning" i18n>Performance counters not available</cd-alert-panel>
 </ng-template>
