--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-bucket-form/rgw-bucket-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-bucket-form/rgw-bucket-form.component.html
@@ -1,8 +1,8 @@
-<cd-loading-panel *ngIf="editing && loading"
+<cd-loading-panel *ngIf="editing && loading && !error"
                   i18n>Loading bucket data...</cd-loading-panel>
 
 <div class="col-sm-12 col-lg-6"
-     *ngIf="!loading">
+     *ngIf="!loading && !error">
   <form name="bucketForm"
         #frm="ngForm"
         [formGroup]="bucketForm"
