--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-user-form/rgw-user-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-user-form/rgw-user-form.component.html
@@ -1,8 +1,9 @@
 <cd-loading-panel *ngIf="editing && loading && !error"
                   i18n>Loading user data...</cd-loading-panel>
-<cd-error-panel *ngIf="editing && error"
+<cd-alert-panel type="error"
+                *ngIf="editing && error"
                 (backAction)="goToListView()"
-                i18n>The user data could not be loaded.</cd-error-panel>
+                i18n>The user data could not be loaded.</cd-alert-panel>
 
 <div class="col-sm-12 col-lg-6"
      *ngIf="!loading && !error">
