--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-bucket-form/rgw-bucket-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-bucket-form/rgw-bucket-form.component.html
@@ -1,11 +1,8 @@
-<cd-loading-panel *ngIf="editing && loading && !error"
+<cd-loading-panel *ngIf="editing && loading"
                   i18n>Loading bucket data...</cd-loading-panel>
-<cd-error-panel *ngIf="editing && error"
-                (backAction)="goToListView()"
-                i18n>The bucket data could not be loaded.</cd-error-panel>
 
 <div class="col-sm-12 col-lg-6"
-     *ngIf="!loading && !error">
+     *ngIf="!loading">
   <form name="bucketForm"
         #frm="ngForm"
         [formGroup]="bucketForm"
