mgr/dashboard: add smart self report summary to details of osd-smart-list
Fixes: https://tracker.ceph.com/issues/41774

Signed-off-by: Patrick Seidensal <pseidensal@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/shared/components/alert-panel/alert-panel.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/shared/components/alert-panel/alert-panel.component.scss
@@ -1,6 +1,6 @@
 .alert-panel-icon {
   vertical-align: top;
-  padding-right: 15px; // See @alert-padding in bootstrap/less/variables.less
+  padding-right: 0.5em;
 }
 
 .alert-panel-title {
