mgr/dashboard: Fix spacing between cards
Fixes: https://tracker.ceph.com/issues/41309

Signed-off-by: Tiago Melo <tmelo@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/dashboard/health/health.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/dashboard/health/health.component.scss
@@ -4,6 +4,7 @@ cd-info-card {
   padding: 0 0.5vw 0 0.5vw;
   @extend .d-flex;
   @extend .flex-column;
+  @extend .mb-4;
 }
 
 ::ng-deep .pg-status-popover-wrapper {
