--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/dashboard/info-card/info-card.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/dashboard/info-card/info-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4"
+<div class="card"
      [ngClass]="cardClass">
   <div class="card-body d-flex align-items-center justify-content-center">
     <h5 class="card-title m-4">
