mgr/dashboard: enable/disable versioning on RGW bucket
Fixes: https://tracker.ceph.com/issues/40920
Signed-off-by: Alfonso Martínez <almartin@redhat.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-bucket-details/rgw-bucket-details.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-bucket-details/rgw-bucket-details.component.html
@@ -59,6 +59,11 @@
                 class="bold">Zonegroup</td>
             <td>{{ bucket.zonegroup }}</td>
           </tr>
+          <tr>
+            <td i18n
+                class="bold">Versioning</td>
+            <td>{{ bucket.versioning }}</td>
+          </tr>
         </tbody>
       </table>
 
