--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-bucket-form/rgw-bucket-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/rgw/rgw-bucket-form/rgw-bucket-form.component.html
@@ -127,6 +127,43 @@
           </div>
         </div>
 
+        <!-- Versioning -->
+        <div class="form-group row"
+             *ngIf="editing">
+          <legend class="cd-header ml-5 mr-5" i18n>Versioning</legend>
+          <div class="col-sm-9 offset-sm-3">
+            <input type="radio"
+                   id="enabled"
+                   name="versioning"
+                   formControlName="versioning"
+                   value="Enabled"
+                   [checked]="bucketForm.get('versioning').value == 'Enabled'"
+                   class="custom-control custom-radio custom-control-inline align-top">
+            <label class="align-text-top"
+                   for="enabled">
+              <span i18n>Enabled</span>
+              <div class="text-muted" i18n>Enables versioning for the objects in the bucket.</div>
+            </label>
+          </div>
+          <div class="col-sm-9 offset-sm-3">
+            <input type="radio"
+                   id="suspended"
+                   name="versioning"
+                   formControlName="versioning"
+                   value="Suspended"
+                   [checked]="bucketForm.get('versioning').value != 'Enabled'"
+                   class="custom-control custom-radio custom-control-inline align-top">
+            <label class="align-text-top"
+                   for="suspended">
+              <span i18n>Suspended</span>
+              <div class="text-muted" i18n>Disables versioning for the objects in the bucket.</div>
+            </label>
+          <span class="invalid-feedback"
+                *ngIf="bucketForm.showError('versioning', frm, 'required')"
+                i18n>This field is required.</span>
+          </div>
+        </div>
+
       </div>
       <div class="card-footer">
         <div class="button-group text-right">
