mgr/dashboard: Clear selection after action.
Signed-off-by: Volker Theile <vtheile@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-reweight-modal/osd-reweight-modal.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-reweight-modal/osd-reweight-modal.component.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="modal-footer">
-        <cd-submit-button (submitAction)="reweight()"
+        <cd-submit-button (submitAction)="submitAction()"
                           [form]="reweightForm"
                           [disabled]="reweightForm.invalid"
                           i18n>Reweight</cd-submit-button>
