--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-scrub-modal/osd-scrub-modal.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-scrub-modal/osd-scrub-modal.component.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="modal-footer">
-        <cd-submit-button (submitAction)="scrub()"
+        <cd-submit-button (submitAction)="submitAction()"
                           [form]="scrubForm"
                           i18n>Submit</cd-submit-button>
         <cd-back-button [back]="bsModalRef.hide"
