--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-directories/cephfs-directories.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-directories/cephfs-directories.component.html
@@ -25,9 +25,17 @@
         </cd-table>
 
         <legend i18n>Snapshots</legend>
-        <cd-table [sorts]="snapshot.sortProperties"
-                  [data]="selectedDir.snapshots"
-                  [columns]="snapshot.columns">
+        <cd-table [data]="selectedDir.snapshots"
+                  [columns]="snapshot.columns"
+                  identifier="name"
+                  forceIdentifier="true"
+                  selectionType="multiClick"
+                  (updateSelection)="snapshot.updateSelection($event)">
+          <cd-table-actions class="table-actions"
+                            [permission]="permission"
+                            [selection]="snapshot.selection"
+                            [tableActions]="snapshot.tableActions">
+          </cd-table-actions>
         </cd-table>
       </div>
     </div>
