mgr/dashboard: Use htmllint
This package will replace htmlhint.

Some rules from the previous installed packages were not working that well.
This new package has more rules and seems to work better.

Signed-off-by: Tiago Melo <tmelo@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-directories/cephfs-directories.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-directories/cephfs-directories.component.html
@@ -37,5 +37,6 @@
 <ng-template #origin
              let-row="row"
              let-value="value">
-  <span class="quota-origin" (click)="selectOrigin(value)">{{value}}</span>
+  <span class="quota-origin"
+        (click)="selectOrigin(value)">{{value}}</span>
 </ng-template>
