mgr/dashboard: Set iSCSI disk WWN and LUN number from the UI
Fixes: https://tracker.ceph.com/issues/41749

Signed-off-by: Ricardo Marques <rimarques@suse.com>
(cherry picked from commit 970c1253c8a73ec31363d9d4cbe5fdf008fb61f5)

 Conflicts:
       src/pybind/mgr/dashboard/frontend/src/app/ceph/block/iscsi-target-form/iscsi-target-form.component.html
       src/pybind/mgr/dashboard/frontend/src/styles.scss

Conflicts caused by "Master" using Bootstrap 4, but "Nautilus" using Bootstap 3.

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/iscsi-target-form/iscsi-target-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/iscsi-target-form/iscsi-target-form.component.html
@@ -125,6 +125,8 @@
                        type="text"
                        [value]="image"
                        disabled />
+                <div class="input-group-addon"
+                     *ngIf="api_version >= 1">lun: {{ imagesSettings[image]['lun'] }}</div>
                 <span class="input-group-btn">
                   <button class="btn btn-default"
                           type="button"
@@ -151,9 +153,19 @@
               </span>
             </ng-container>
 
+            <input class="form-control"
+                   type="hidden"
+                   id="disks"
+                   name="disks"
+                   formControlName="disks" />
+
             <span class="help-block"
-                  *ngIf="targetForm.showError('disks', formDir, 'required')"
-                  i18n>At least 1 image is required.</span>
+                  *ngIf="targetForm.showError('disks', formDir, 'dupLunId')"
+                  i18n>Duplicated LUN numbers.</span>
+
+            <span class="help-block"
+                  *ngIf="targetForm.showError('disks', formDir, 'dupWwn')"
+                  i18n>Duplicated WWN.</span>
 
             <div class="row">
               <div class="col-md-12">
@@ -231,7 +243,6 @@
                        id="target_password"
                        name="target_password"
                        formControlName="password" />
-
                 <span class="input-group-btn">
                   <button type="button"
                           class="btn btn-default"
