mgr/dashboard: Set iSCSI disk WWN and LUN number from the UI
Fixes: https://tracker.ceph.com/issues/41749

Signed-off-by: Ricardo Marques <rimarques@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/styles.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/styles.scss
@@ -278,7 +278,8 @@ a {
   color: $color-required-text;
 }
 /* Forms */
-.form-group > .col-form-label > span.required {
+.form-group > .col-form-label > span.required,
+.form-group > .col-sm-12 > .col-form-label > span.required {
   @extend .fa;
   @extend .fa-asterisk;
   @extend .required;
