--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/iscsi-target-form/iscsi-target-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/block/iscsi-target-form/iscsi-target-form.component.html
@@ -127,6 +127,8 @@
                        [value]="image"
                        disabled />
                 <span class="input-group-append">
+                  <div class="input-group-text"
+                       *ngIf="api_version >= 1">lun: {{ imagesSettings[image]['lun'] }}</div>
                   <button class="btn btn-light"
                           type="button"
                           (click)="imageSettingsModal(image)">
@@ -151,6 +153,20 @@
                               i18n>This image has modified settings.</ng-container>
               </span>
             </ng-container>
+
+            <input class="form-control"
+                   type="hidden"
+                   id="disks"
+                   name="disks"
+                   formControlName="disks" />
+
+            <span class="invalid-feedback"
+                  *ngIf="targetForm.showError('disks', formDir, 'dupLunId')"
+                  i18n>Duplicated LUN numbers.</span>
+
+            <span class="invalid-feedback"
+                  *ngIf="targetForm.showError('disks', formDir, 'dupWwn')"
+                  i18n>Duplicated WWN.</span>
 
             <div class="row">
               <div class="col-md-12">
@@ -228,7 +244,6 @@
                        id="target_password"
                        name="target_password"
                        formControlName="password" />
-
                 <span class="input-group-append">
                   <button type="button"
                           class="btn btn-light"
