--- a/src/pybind/mgr/dashboard/frontend/src/app/shared/components/form-modal/form-modal.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/shared/components/form-modal/form-modal.component.html
@@ -5,54 +5,49 @@
   </ng-container>
   <ng-container class="modal-content">
     <form [formGroup]="formGroup"
+          #formDir="ngForm"
           novalidate>
       <div class="modal-body">
         <p *ngIf="message">{{ message }}</p>
         <ng-container *ngFor="let field of fields">
-          <div class="form-group row">
-            <ng-container [ngSwitch]="field.type">
-              <ng-template [ngSwitchCase]="'inputText'">
-                <label *ngIf="field.label"
-                       class="col-form-label col-sm-3"
-                       [for]="field.name">
-                  {{ field.label }}
-                </label>
-                <div [ngClass]="{'col-sm-9': field.label, 'col-sm-12': !field.label}">
-                  <input type="text"
-                         class="form-control"
-                         [id]="field.name"
-                         [name]="field.name"
-                         [formControlName]="field.name">
-                  <span *ngIf="formGroup.hasError('required', field.name)"
-                        class="invalid-feedback"
-                        i18n>This field is required.</span>
-                </div>
-              </ng-template>
-              <ng-template [ngSwitchCase]="'select'">
-                <label *ngIf="field.label"
-                       class="col-form-label col-sm-3"
-                       [for]="field.name">
-                  {{ field.label }}
-                </label>
-                <div [ngClass]="{'col-sm-9': field.label, 'col-sm-12': !field.label}">
-                  <select class="form-control custom-select"
-                          [id]="field.name"
-                          [formControlName]="field.name">
-                    <option *ngIf="field.placeholder"
-                            [ngValue]="null">
-                      {{ field.placeholder }}
-                    </option>
-                    <option *ngFor="let option of field.options"
-                            [value]="option.value">
-                      {{ option.text }}
-                    </option>
-                  </select>
-                  <span *ngIf="formGroup.hasError('required', field.name)"
-                        class="invalid-feedback"
-                        i18n>This field is required.</span>
-                </div>
-              </ng-template>
-            </ng-container>
+          <div class="form-group row cd-{{field.name}}-form-group">
+            <label *ngIf="field.label"
+                   class="col-form-label col-sm-3"
+                   [for]="field.name">
+              {{ field.label }}
+            </label>
+            <div [ngClass]="{'col-sm-9': field.label, 'col-sm-12': !field.label}">
+              <input *ngIf="['text', 'number'].includes(field.type)"
+                     [type]="field.type"
+                     class="form-control"
+                     [id]="field.name"
+                     [name]="field.name"
+                     [formControlName]="field.name">
+              <input *ngIf="field.type === 'binary'"
+                     type="text"
+                     class="form-control"
+                     [id]="field.name"
+                     [name]="field.name"
+                     [formControlName]="field.name"
+                     cdDimlessBinary>
+              <select *ngIf="field.name === 'select'"
+                      class="form-control custom-select"
+                      [id]="field.name"
+                      [formControlName]="field.name">
+                <option *ngIf="field.placeholder"
+                        [ngValue]="null">
+                  {{ field.placeholder }}
+                </option>
+                <option *ngFor="let option of field.options"
+                        [value]="option.value">
+                  {{ option.text }}
+                </option>
+              </select>
+              <span *ngIf="formGroup.showError(field.name,formDir)"
+                    class="invalid-feedback">
+                {{ getError(field) }}
+              </span>
+            </div>
           </div>
         </ng-container>
       </div>
