--- a/src/pybind/mgr/dashboard/frontend/src/styles.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/styles.scss
@@ -17,6 +17,7 @@ $font-family-sans-serif: 'Helvetica Neue', Helvetica, Arial, 'Noto Sans', sans-s
 
 $badge-font-size: 1rem;
 $form-feedback-font-size: 100%;
+$popover-max-width: 350px;
 
 @import '~bootstrap/scss/bootstrap';
 @import '~fork-awesome/scss/fork-awesome';
@@ -111,7 +112,7 @@ option {
   font-family: monospace;
 }
 .text-pre {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 /* Buttons */
