mgr/dashboard: hide search field when selecting OSD devices
Signed-off-by: Kiefer Chang <kiefer.chang@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/inventory/inventory-devices/inventory-devices.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/inventory/inventory-devices/inventory-devices.component.html
@@ -4,7 +4,8 @@
           [forceIdentifier]="true"
           [selectionType]="selectionType"
           columnMode="flex"
-          [autoReload]="false">
+          [autoReload]="false"
+          [searchField]="false">
   <div class="table-filters form-inline"
        *ngIf="filters.length !== 0">
     <div class="form-group filter tc_filter"
