--- a/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.html
@@ -146,18 +146,11 @@
            routerLink="/logs">Logs</a>
       </li>
       <li routerLinkActive="active"
-          class="tc_submenuitem tc_submenuitem_prometheus"
+          class="tc_submenuitem tc_submenuitem_monitoring"
           *ngIf="prometheusConfigured && permissions.prometheus.read">
         <a i18n
            class="dropdown-item"
-           routerLink="/alerts">Alerts</a>
-      </li>
-      <li routerLinkActive="active"
-          class="tc_submenuitem tc_submenuitem_prometheus"
-          *ngIf="prometheusConfigured && permissions.prometheus.read">
-        <a i18n
-           class="dropdown-item"
-           routerLink="/silence">Silences</a>
+           routerLink="/monitoring">Monitoring</a>
       </li>
     </ul>
   </li>
