mgr/dashboard: Let the user clear the datatable selection
Signed-off-by: Sebastian Krah <skrah@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/pool/pool-list/pool-list.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/pool/pool-list/pool-list.component.html
@@ -19,6 +19,7 @@
       </cd-table-actions>
       <cd-pool-details cdTableDetail
                        id="pool-list-details"
+                       [table]="table"
                        [selection]="selection"
                        [permissions]="permissions"
                        [cacheTiers]="selectionCacheTiers">
