mgr/dashboard: CRUSH ruleset management
Fixes: https://tracker.ceph.com/issues/43260

Signed-off-by: Ricardo Marques <rimarques@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/pool/pool-form/pool-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/pool/pool-form/pool-form.component.html
@@ -296,6 +296,20 @@
                       <i [ngClass]="[icons.questionCircle]"
                          aria-hidden="true"></i>
                     </button>
+                    <button class="btn btn-light"
+                            type="button"
+                            [disabled]="editing"
+                            (click)="addCrushRuleset()">
+                      <i [ngClass]="[icons.add]"
+                         aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-light"
+                            type="button"
+                            (click)="deleteCrushRuleset()"
+                            [disabled]="editing || ecProfiles.length < 1">
+                      <i [ngClass]="[icons.trash]"
+                         aria-hidden="true"></i>
+                    </button>
                   </span>
                 </div>
                 <span class="form-text text-muted"
